<resources>
    <string name="app_name">sparkathon_mvp</string>
    <string name="action_settings">Settings</string>
    <string name="index">Index</string>
    <string name="first_menu">first menu</string>
    <string name="username">shellming</string>
    <string name="no_login">NO LOGIN</string>
    <string name="notification">Notification</string>
    <string name="timeline">Timeline</string>
    <string name="temperature">Temperature</string>
    <string name="wind">WindSpeed</string>
    <string name="wet">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="visit">Visibility</string>
    <string name="send">Send</string>
    <string name="default_username">Tap avatar to login</string>
</resources>
