<android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            card_view:cardCornerRadius="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:textSize="24sp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@color/divide"/>
                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/temperature_chart"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            card_view:cardCornerRadius="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    android:textSize="24sp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@color/divide"/>
                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/wind_chart"
                    android:layout_width="match_parent"
                    android:layout_height="190dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            card_view:cardCornerRadius="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wet"
                    android:textSize="24sp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@color/divide"/>
                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/wet_chart"
                    android:layout_width="match_parent"
                    android:layout_height="190dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            card_view:cardCornerRadius="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visit"
                    android:textSize="24sp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@color/divide"/>
                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/visit_chart"
                    android:layout_width="match_parent"
                    android:layout_height="190dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            card_view:cardCornerRadius="2dp"
            android:layout_marginBottom="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:textSize="24sp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@color/divide"/>
                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/pressure_chart"
                    android:layout_width="match_parent"
                    android:layout_height="190dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>